--- a/static/templates/search.html
+++ b/static/templates/search.html
@@ -1,28 +1,13 @@
 <div class="index">
-	<p class="disclaimer">Search any person, place or famous event.<br/>We have them all!</p>
+	<p class="disclaimer">Insert the link of any article you want us to summarize.</p>
 
 	<form class="search-form" ng-submit="submitSearchForm()">
-
 		<input type="text" class="query" name="query" ng-model="query" placeholder="Search..." autocomplete="off"/>
 		<button class="button" type="submit">
 			<span class="icon">
-				<i class="fa fa-search"></i>
+				<i class="fa fa-paper-plane"></i>
 			</span>
-			Search
+			Go!
 		</button>
-		<!--
-		<div class="languages" ng-hide="query">
-			<input type="radio" id="langen" name="lang" ng-model="lang" value="en" ng-checked="true">
-			<label for="langen">
-				<img src="/static/img/flags/en.png"/>
-				EN
-			</label>
-			<input type="radio" id="langes" name="lang" ng-model="lang" value="es">
-			<label for="langes">
-				<img src="/static/img/flags/es.png"/>
-				ES
-			</label>
-		</div>
-		-->
 	</form>
 </div>
