--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -44,6 +44,10 @@
 				<span class="number">2</span>
 				<span class="title">Review</span>
 			</li>
+			<li class="bubble" ng-class="{'active': route.current.alias == 'design'}">
+				<span class="number">3</span>
+				<span class="title">Design</span>
+			</li>
 		</ul>
 
 		<span class="go-button go-forward ng-hide" ng-show="route.next">
