--- a/templates/index.html
+++ b/templates/index.html
@@ -96,9 +96,9 @@
 		<div ui-view></div>
 
 		<!-- Service -->
-		<script src="/static/js/app/service.js"></script>
+		<script src="/static/js/app/services/requests.js"></script>
 		<!-- Tracker -->
-		<script src="/static/js/app/tracker.js"></script>
+		<script src="/static/js/app/services/tracker.js"></script>
 		<!-- Factory -->
 		<script src="/static/js/app/factory.js"></script>
 		<!-- UI Elements -->
@@ -108,5 +108,6 @@
 		<script src="/static/js/app/controllers/header.js"></script>
 		<script src="/static/js/app/controllers/search.js"></script>
 		<script src="/static/js/app/controllers/review.js"></script>
+		<script src="/static/js/app/controllers/design.js"></script>
 	</body>
 </html>
