--- a/static/templates/login.html
+++ b/static/templates/login.html
@@ -2,10 +2,10 @@
 	<div class="inner">
 		<div class="login-header">
 			<div class="main-logo">
-				<img  src="/static/img/logo-w.svg"/><span>// trivia</span>
+				<img  src="/static/img/logo-w.svg"/><span>// abstract</span>
 			</div>
 			<div class="login-disclaimer">
-				<p>Create <b>quizzes in seconds</b> about people, places and famous events</p>
+				<p>Create <b>summaries in seconds</b> about any online article</p>
 			</div>
 		</div>
 
@@ -24,21 +24,28 @@
 					<i class="fa fa-search"></i>
 				</span>
 				<span class="step-number">1</span>
-				<p class="step-desc">Select a topic</p>
+				<p class="step-desc">Paste your link</p>
 			</div>
 			<div class="step">
 				<span class="step-icon">
 					<i class="fa fa-pencil"></i>
 				</span>
 				<span class="step-number">2</span>
-				<p class="step-desc">Review the generated questions</p>
+				<p class="step-desc">Review the selected sentences</p>
 			</div>
 			<div class="step">
 				<span class="step-icon">
-					<i class="fa fa-magic"></i>
+					<i class="fa fa-pencil"></i>
 				</span>
 				<span class="step-number">3</span>
-				<p class="step-desc">Enjoy the results!</p>
+				<p class="step-desc">Select a template</p>
+			</div>
+			<div class="step">
+				<span class="step-icon">
+					<i class="fa fa-file-image-o"></i>
+				</span>
+				<span class="step-number">4</span>
+				<p class="step-desc">Enjoy the summary!</p>
 			</div>
 		</div>
 	</div>
