Emojis and auto language detection

--- a/static/style/templates/nude.scss
+++ b/static/style/templates/nude.scss
@@ -2,9 +2,8 @@
 
 body {
 	margin: 10vh auto;
-	max-width: 700px;
-	padding: 2vh 5vw;
-	background: white;
+	max-width: 900px;
+	background: #e3e3e3;
 	color: #222222;
 
 	font-family: 'Roboto Slab', serif;
@@ -17,10 +16,17 @@ body {
     -moz-font-feature-settings: "liga" on;
 }
 
+h1 {
+	padding: 2vh 5vw;
+}
+
 ul {
 	list-style: none;
-	margin: 5vh 0;
-	padding: 0;
+	margin: 5vh 5vw;
+	padding: 2vh 3vw;
+    background: #fff;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.25);
+	font-size: 18px;
 	li {
 		line-height: 30px;
     	margin: 2vh 0;
@@ -55,4 +61,8 @@ ul {
 		text-decoration: none;
 		text-transform: none;
 	}
+}
+
+@media screen and (max-width: 480px) {
+	ul {margin: 5vh 0;}
 }
