Icons and emojis :)

--- a/templates/designs/simple.html
+++ b/templates/designs/simple.html
@@ -51,7 +51,7 @@
 		<h1>{{ title }}</h1>
 		<ul>
 			{% for sentence in sentences %}
-			<li>{{ sentence }}</li>
+			<li>{{ sentence.content }}</li>
 			{% endfor %}
 		</ul>
 
