remove feature request

--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -4,9 +4,9 @@
 			<img src="/static/img/logo-w.svg"/>
 		</a>
 
-		<div class="feedback">
-			<a class="button" href="https://thejuice.canny.io/feature-request" target="_blank" ng-click="ga('send', 'event', 'header', 'click', 'feature-request')">Feature Request</a>
-		</div>
+		<!--<div class="feedback">-->
+			<!--<a class="button" href="https://thejuice.canny.io/feature-request" target="_blank" ng-click="ga('send', 'event', 'header', 'click', 'feature-request')">Feature Request</a>-->
+		<!--</div>-->
 
 		<div class="usermenu" ng-init="{toggleMenu: false}">
 			<div class="picture"><img src="{{ picture }}"/></div>
