--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -610,6 +610,63 @@ body {
 			}
 		}
 	}
+	.paid-popup {
+		display: inline-block;
+		vertical-align: top;
+		position: fixed;
+		top: 0;
+		left: 0;
+		background: rgba(0,0,0,0.5);
+		width: 100%;
+		height: 100%;
+		transition: all .2s ease-in-out;
+
+		&.hidden {
+			opacity: 0;
+			visibility: hidden;
+		}
+		.popup-content {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			width: 90%;
+			max-width: 600px;
+			height: auto;
+			max-height: 90%;
+			overflow-y: auto;
+			padding: 6vh 5vw;
+			background: white;
+			border: 1px solid #ccc;
+			border-radius: 5px;
+			box-shadow: 0 5px 10px -5px #000;
+			font-size: 0;
+
+			.title {
+				font-family: 'Raleway', sans-serif;
+				font-size: x-large;
+				margin: 0 0 3vh 0;
+				text-align: left;
+			}
+			.content {
+				font-size: medium;
+				text-align: left;
+			}
+			.button {
+				text-transform: uppercase;
+				margin: 5vh 0 0 0;
+			}
+			.close {
+				position: absolute;
+				top: 0;
+				right: 0;
+				width: 30px;
+				height: 30px;
+				font-size: x-large;
+				cursor: pointer;
+			}
+		}
+	}
 }
 
 
