--- a/static/style/style.scss
+++ b/static/style/style.scss
@@ -102,7 +102,8 @@ body {
 	.main-logo {
 		display: inline-block;
 		vertical-align: top;
-		width: 33.33%;
+		//width: 33.33%;
+		width: 50%;
 		height: 40px;
 		padding: 5px 0;
 		img {
@@ -145,7 +146,8 @@ body {
 		display: inline-block;
 		vertical-align: top;
 		position: relative;
-		width: 33.33%;
+		//width: 33.33%;
+		width: 50%;
 		height: 40px;
 		text-align: right;
 		.picture {
