--- a/templates/index.html
+++ b/templates/index.html
@@ -18,23 +18,23 @@
 		<!--facebook-->
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Thejuice">
-        <meta property="og:description" content="TheJuice Trivia. Create a quiz about any historical figure in less than a minute">
+        <meta property="og:description" content="TheJuice Abstract. Create a summary from any article">
         <meta property="og:image" content="/static/img/logo.png">
         <meta property="og:url" content="http://takethejuice.com/es/">
 
         <!--twitter-->
         <meta name="twitter:title" content="TheJuice">
-        <meta name="twitter:description" content="TheJuice Trivia. Create a quiz about any historical figure in less than a minute">
+        <meta name="twitter:description" content="TheJuice Abstract. Create a summary from any article">
         <meta name="twitter:image" content="/static/img/logo.png">
         <meta name="twitter:card" content="summary_large_image">
 
         <PageMap>
-             <DataObject type="thumbnail">
-               <Attribute name="src" value="assets/images/ico/android-icon-192x192.png"/>
-               <Attribute name="width" value="100"/>
-               <Attribute name="height" value="130"/>
-             </DataObject>
-           </PageMap>
+	        <DataObject type="thumbnail">
+		        <Attribute name="src" value="assets/images/ico/android-icon-192x192.png"/>
+		        <Attribute name="width" value="100"/>
+		        <Attribute name="height" value="130"/>
+	        </DataObject>
+        </PageMap>
 
         <meta name="thumbnail" content="assets/images/ico/android-icon-192x192.png" />
 
