--- a/static/style/style.css
+++ b/static/style/style.css
@@ -743,12 +743,20 @@ body {
         width: 100%;
         transition: all .2s ease-in-out;
         border: 1px solid #ddd;
-        border-radius: 4px; }
+        border-radius: 4px;
+        overflow: hidden; }
         .design .templates-list .template label:hover, .design .templates-list .template label:active {
           box-shadow: 0 4px 10px -5px #000; }
+        .design .templates-list .template label .price {
+          display: inline-block;
+          vertical-align: top;
+          width: 100%;
+          height: auto;
+          padding: 12px;
+          text-align: center; }
         .design .templates-list .template label .indicator {
           position: absolute;
-          top: 10px;
+          top: 7px;
           left: 10px;
           width: 30px;
           height: 30px;
@@ -761,13 +769,27 @@ body {
           z-index: 1; }
         .design .templates-list .template label .thumbnail {
           width: 100%;
-          height: auto;
-          border-top-left-radius: 3px;
-          border-top-right-radius: 3px; }
+          height: auto; }
         .design .templates-list .template label .name {
           display: block;
           text-align: center;
           padding: 1vh 1vw; }
+        .design .templates-list .template label .coming-soon {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          text-align: center;
+          background: rgba(0, 0, 0, 0.8);
+          color: white;
+          font-size: 25px;
+          font-weight: bold; }
+          .design .templates-list .template label .coming-soon span {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%); }
 
 @media screen and (max-width: 600px) {
   .index .search-form input {
