--- a/static/templates/review.html
+++ b/static/templates/review.html
@@ -8,7 +8,7 @@
 				<div class="preview-header">
 					<div class="img ng-hide" ng-show="results.picture" style="background-image: url('{{ results.picture }}')"></div>
 					<div class="info" ng-class="{'with-image': results.picture}">
-						<h1>Review the information about <b>{{ results.title }}</b></h1>
+						<h1>Review the information about <b>{{ results.name }}</b></h1>
 						<p>We include every single event, but you might find some of them not really relevant. Feel free to edit or remove any of them, or to create any new one :).</p>
 					</div>
 				</div>
