--- a/static/templates/search.html
+++ b/static/templates/search.html
@@ -10,7 +10,18 @@
 			</span>
 			Search
 		</button>
-		s
+		<!--<div class="languages" ng-hide="query">
+			<input type="radio" id="langen" name="lang" ng-model="lang" value="en" ng-checked="true">
+			<label for="langen">
+				<img src="/static/img/flags/en.png"/>
+				EN
+			</label>
+			<input type="radio" id="langes" name="lang" ng-model="lang" value="es">
+			<label for="langes">
+				<img src="/static/img/flags/es.png"/>
+				ES
+			</label>
+		</div>-->
 	</form>
 	<p class="paid-version">Or insert any URL in the <a href="" ng-click="paidPopup()">PAID VERSION</a></p>
 
