add twitter cards

--- a/templates/designs/default.html
+++ b/templates/designs/default.html
@@ -34,7 +34,7 @@
         <!--twitter-->
         <meta name="twitter:title" content="{{ title }} - TheJuice">
         <meta name="twitter:description" content="Translating teachers knowledge to fit into pupils social media">
-        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:card" content="{{ image }}">
 
 		<!-- GA -->
 		<script>
