First hit fixed

--- a/static/templates/search.html
+++ b/static/templates/search.html
@@ -13,7 +13,7 @@
 
 		<autosuggestions query="query" items="results" lang="lang" submit="reviewPage(pageId)" search="submitSearchForm(query)"></autosuggestions>
 
-		<div class="languages" ng-hide="query">
+		<!--<div class="languages" ng-hide="query">
 			<input type="radio" id="langen" name="lang" ng-model="lang" value="en" ng-checked="true">
 			<label for="langen">
 				<img src="/static/img/flags/en.png"/>
@@ -24,6 +24,6 @@
 				<img src="/static/img/flags/es.png"/>
 				ES
 			</label>
-		</div>
+		</div>-->
 	</form>
 </div>
